--- a/employee-application/pom.xml
+++ b/employee-application/pom.xml
@@ -11,8 +11,16 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>4.1.1</version>
-			<!-- <scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
 
